--- a/pages/1970.html
+++ b/pages/1970.html
@@ -1,63 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-    rel="stylesheet"
-    href="//cdn.web-fonts.ge/fonts/bpg-glaho-bold/css/bpg-glaho-bold.min.css"
-  />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="//cdn.web-fonts.ge/fonts/bpg-glaho-bold/css/bpg-glaho-bold.min.css" />
   <link rel="stylesheet" href="../css/global.css" />
-    <title>Document</title>
+  <title>Document</title>
 </head>
+
 <body>
-    <header>
-        <div class="c1">
-          <a href="https://www.tbceducation.ge/" target="_blank"
-            ><img src="../images/თიბისი.png" alt="tbclogo"
-          /></a>
-          <nav>
-            <ul>
-              <a href="../index.html"> <li>მთავარი</li></a>
-              <a href="about.html"> <li>ჩვენს შესახებ</li></a>
-              <a href="news.html"> <li>სიახლე</li></a>
-              <a href="contact.html"> <li>კონტაქტი</li></a>
-              <a href="feedback.html"> <li>უკუკავშირი</li></a>
-            </ul>
-          </nav>
-          <svg class="burgerbar" xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+  <header>
+    <div class="c1">
+      <a href="https://www.tbceducation.ge/" target="_blank"><img src="../images/თიბისი.png" alt="tbclogo" /></a>
+      <nav>
+        <ul>
+          <a href="../index.html">
+            <li>მთავარი</li>
+          </a>
+          <a href="about.html">
+            <li>ჩვენს შესახებ</li>
+          </a>
+          <a href="news.html">
+            <li>სიახლე</li>
+          </a>
+          <a href="contact.html">
+            <li>კონტაქტი</li>
+          </a>
+          <a href="feedback.html">
+            <li>უკუკავშირი</li>
+          </a>
+        </ul>
+      </nav>
+      <svg class="burgerbar" xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 448 512">
+        <path
+          d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
+      </svg>
+    </div>
+  </header>
+  <div class="topimg3">
+    <a href="more.html">
+      <h1>1970</h1>
+    </a>
+  </div>
+  <section class="s1950">
+    <ul class="list1">
+      <li><a href="">1973</a><img src="../images/1.svg" alt="" />
+      </li>
+      <li><a href="1973.html">1973 </a></li>
+      <li><a href="1977.html">1977 </a></li>
+      <li><a href="1979.html">1979 </a></li>
+
+    </ul>
+    <div class="m1955">
+      <div class="lurja">
+        <p>
+          <b>„ვერის უბნის მელოდიები"</b>— ქართული მუსიკალური კომედიის ჟანრის მხატვრული ფილმი, გადაღებული 1973 წელს
+          კინოსტუდიაში „ქართული ფილმი“. იგი პირველი ქართული მიუზიკლია.
+          <br />
+          <br />
+          <b>სიუჟეტი </b>- ფილმი ღარიბი ობოლი გოგონების ამბავს მოგვითხრობს, რომელთაც ცეკვის შესწავლა სურთ, მაგრამ
+          საამისო სახსრები ვერ გამოუნახავთ. ჰოდა, მათი ოცნების ასრულება მათსავით ღარიბ, კეთილ მრეცხავ ქალს უკისრია,
+          რისთვისაც ისეთი ოინები ჩაუდენია, რომ მთელი ქალაქი გაუოცებია, კინაღამ ბუნტიც აუტეხია და რაც მთავარია გოგონები
+          „ტანც-კლასშიც“ მოუწყვია.
+        </p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/eLOYeaX2Mic" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+      <div class="lurja2">
+        <div class="whitebox">
+          <ul>
+            <div class="smallbox">
+              <li>რეჟისორი</li>
+              <br />
+              <div>
+                <li>გიორგი შენგელაია</li>
+                <img src="../images/star copy 1.svg" alt="star" />
+              </div>
+            </div>
+            <li>
+              <svg xmlns="http://www.w3.org/2000/svg" width="2" height="81" viewBox="0 0 2 81" fill="none">
+                <path d="M1 0.5V81" stroke="black" stroke-opacity="0.05" />
+              </svg>
+            </li>
+            <div class="smallbox">
+              <li>ხანგრძლივობა</li>
+              <br />
+              <div>
+                <li>97წთ</li>
+                <img src="../images/star copy 1.svg" alt="star" />
+              </div>
+            </div>
+            <li>
+              <svg xmlns="http://www.w3.org/2000/svg" width="2" height="81" viewBox="0 0 2 81" fill="none">
+                <path d="M1 0.5V81" stroke="black" stroke-opacity="0.05" />
+              </svg>
+            </li>
+            <div class="smallbox">
+              <li>სტუდია</li>
+              <br />
+              <div>
+                <li>"ქართული ფილმი"</li>
+                <img src="../images/star copy 1.svg" alt="star" />
+              </div>
+            </div>
+          </ul>
         </div>
-      </header>
-      <footer>
-        <div class="greenbox">
-            <ul>
-                <li>მთავარი</li>
-                <li>ჩვენს შესახებ</li>
-                <li>უკუკავშირი</li>
-                <li>კონტაქტი</li>
-                
-            </ul>
-            <ul>
-                <li>მეტი</li>
-                <li>1950</li>
-                <li>1960</li>
-                <li>1970</li>
-                <li>1980</li>
-            </ul>
-            <ul>
-                <li>სიახლე</li>
-                <li>2000</li>
-                <li>2010</li>
-                <li>2020</li>
-            </ul>
-            <ul>
-                <li></li>
-                <li><img src="../images/facebook-24px 1.svg" ></li>
-                <li><img src="../images/twitter (1) 1.svg"></li>
-                <li><img src="../images/instagram 1.svg" ></li>
-                <li><img src="../images/linkedin-logo 1.svg" ></li>
-            </ul>
+        <div class="images">
+          <img src="../images/ვერისუბნის_მელოდიები (1).jpg" alt="verisubnis_melodiebi">
+          <div class="img1">
+            <img src="../images/სოფიკო-ვერის-უბნის-მელოდიები.jpg" alt="verisubnis_melodiebi">
+            <img src="../images/veris-u.222.jpg" alt="verisubnis_melodiebi">
+          </div>
         </div>
-    </footer>
+      </div>
+    </div>
+    </div>
+    <div class="firuzi">
+      <img src="../images/video-camera.png" alt="video-camera">
+      <div>
+        <h1>როგორ შეგვიძილია გავაუმჯობესოთ ვებ-გვერდი?</h1>
+        <h2>თქვენი აზრი მნიშვმელოვანია!</h2>
+      </div>
+      <a href="feedback.html">დაგვიკავშირდით
+      </a>
+    </div>
+  </section>
+  <footer>
+    <div class="greenbox">
+      <ul>
+        <li>მთავარი</li>
+        <li>ჩვენს შესახებ</li>
+        <li>უკუკავშირი</li>
+        <li>კონტაქტი</li>
+
+      </ul>
+      <ul>
+        <li>მეტი</li>
+        <li>1950</li>
+        <li>1960</li>
+        <li>1970</li>
+        <li>1980</li>
+      </ul>
+      <ul>
+        <li>სიახლე</li>
+        <li>2000</li>
+        <li>2010</li>
+        <li>2020</li>
+      </ul>
+      <ul>
+        <li></li>
+        <li>
+          <a href="https://geolab.edu.ge/" target="_blank"><img src="../images/facebook-24px 1.svg" /></a>
+        </li>
+        <li>
+          <a href="https://geolab.edu.ge/" target="_blank"><img src="../images/twitter (1) 1.svg" />
+          </a>
+        </li>
+        <li>
+          <a href="https://geolab.edu.ge/" target="_blank"><img src="../images/instagram 1.svg" />
+          </a>
+        </li>
+        <li>
+          <a href="https://geolab.edu.ge/" target="_blank">
+            <img src="../images/linkedin-logo 1.svg" />
+          </a>
+        </li>
+      </ul>
+    </div>
+  </footer>
 </body>
+
 </html>
