--- a/pages/1983.html
+++ b/pages/1983.html
@@ -33,22 +33,19 @@
       </div>
       <section class="s1950">
         <ul class="list1">
-          <li><a href="">1982</a> <img src="../images/1.svg" alt="" /></li>
-          <li><a href="1983.html">1983 </a></li>
+          <li><a href="1980.html">1982</a> </li>
+          <li><a href="">1983 </a> <img src="../images/1.svg" alt="" /></li>
           
         </ul>
         <div class="m1955">
           <div class="lurja">
             <p>
-              <b>„კუკარაჩა“ </b> — 1982 წლის ფილმი. რეჟისორები — სიკო და ქეთი დოლიძეები. გადაღებულია ნოდარ დუმბაძის ამავე სახელწოდების ნაწარმოების მიხედვით.
+              <b>„ცისფერი მთები ანუ დაუჯერებილი ამბავი“ </b> — ქართული მხატვრული ფილმი. მისი რეჟისორია ელდარ შენგელაია. გამოვიდა 1984 წელს. ფილმი გადაღებულია რეზო ჭეიშვილის ამავე სახელწოდების მოთხრობის მიხედვით.
               <br />
               <br />
-              <b>სიუჟეტი </b>- თბილისის ერთ-ერთი უბნის მილიციის რწმუნებული, „მოზარდების რისხვა“, მეტსახელად „კუკარაჩა“, უბნის ბიჭების თითოეულ ნაბიჯს მკაცრად აკონტროლებს. იგი ადგილობრივი მოსახლეების უსაფრთხოებასა და ზნეობაზეც ზრუნავს.
-
-              კუკარაჩა შავი სამყაროს ავტორიტეტის, რეციდივისტ მურტალოს საყვარელს, ინგას ურჩევს, ბანდიტს ჩამოშორდეს. ინგას ბინაში კუკარაჩა მურტალოს დააკავებს, მაგრამ ქალის თხოვნით გაათავისუფლებს. შემდგომში, ინგას და კუკარაჩას რომანით გაცოფებული მურტალო კუკარაჩას კლავს. სასამართლო პროცესზე ინგა ყოფილ საყვარელს შვიდ ტყვიას დაახლის, მაგრამ შვიდივეს ააცილებს.
+              <b>სიუჟეტი </b>- ახალგაზრდა მწერალს რედაქციაში მოთხრობა მიაქვს. მისი განხილვის მოლოდინში გადის შემოდგომა, ზამთარი, გაზაფხული… მოთხრობას არათუ არავინ კითხულობს, მისი ყველა არსებული ეგზემპლარიც უკვალოდ ქრება. ამ დაწესებულებაში ყველა თავისი საქმით არის გართული: დირექტორი მუდამ გადარბენაზეა — თათბირიდან ბანკში, ბანკიდან შეხვედრაზე, შეხვედრიდან ბანკეტზე და ასე დაუსრულებლად, რედაქტორებიდან ზოგი ფრანგულს სწავლობს, ზოგი კერავს, ზოგი საუზმეს იმზადებს, ვიღაც შვებულებაშია, ვიღაც — მივლინებაში, სხვები ჭადრაკს თამაშობენ… ერთადერთი ადამიანი, ვინც ხელნაწერებს კითხულობს, მღებავია… ფილმი ალეგორიული კომედიაა. იგი ნიღაბს ხდის საბჭოთა ბიუროკრატიზმს და უპასუხისმგებლობას. რედაქციაში მუშაობენ თავიანთი ვიწრო, ობივატელური ინტერესების ჩარჩოში მომწყვდეული ადამიანები; ამ სისტემის არაეფექტურობა სრულდება პირდაპირ მნიშვნელობით დაწესებულების ნგრევით, გადატანით კი — საბჭოთა სისტემის ნგრევით.
             </p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/_U92KWRXOeI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ftqOy8FzCg8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
           <div class="lurja2">
             <div class="whitebox">
@@ -57,7 +54,7 @@
                   <li>რეჟისორი</li>
                   <br />
                   <div>
-                    <li>სიკო და ქეთი დოლიძეები</li>
+                    <li>ელდარ შენგელაია</li>
                     <img src="../images/star copy 1.svg" alt="star" />
                   </div>
                 </div>
@@ -70,7 +67,7 @@
                   <li>ხანგრძლივობა</li>
                   <br />
                   <div>
-                    <li>89წთ</li>
+                    <li>98წთ</li>
                     <img src="../images/star copy 1.svg" alt="star" />
                   </div>
                 </div>
@@ -90,10 +87,10 @@
               </ul>
             </div>
             <div class="images2">
-              <img src="../images/კუკარაჩა.jpg" alt="kukaracha">
+              <img src="../images/ცისფერი_მთები.jpg" alt="cisferi_mtebi">
               <div class="img2">
-                <img src="../images/Kukaracha004.jpg" alt="kukaracha">
-                <img src="../images/Kukaracha005.jpg" alt="kukaracha">
+                <img src="../images/ცისფერი_მთები1.jpg" alt="cisferi_mtebi">
+                <img src="../images/cisperi-mtebi-1.jpg" alt="cisferi_mtebi">
               </div>
             </div>
           </div>
