--- a/pages/more.html
+++ b/pages/more.html
@@ -58,7 +58,7 @@
             <div class="c6"><p>1950</p></div>
           </div>
         </a>
-        <a href="1950.html"
+        <a href="1960.html"
           ><div class="a2">
             <div class="c7"><p>1960</p></div>
           </div>
@@ -108,11 +108,27 @@
                 <li>2020</li>
             </ul>
             <ul>
-                <li></li>
-                <li><img src="../images/facebook-24px 1.svg" ></li>
-                <li><img src="../images/twitter (1) 1.svg"></li>
-                <li><img src="../images/instagram 1.svg" ></li>
-                <li><img src="../images/linkedin-logo 1.svg" ></li>
+              <li></li>
+              <li>
+                <a href="https://geolab.edu.ge/" target="_blank"
+                  ><img src="../images/facebook-24px 1.svg"
+                /></a>
+              </li>
+              <li>
+                <a href="https://geolab.edu.ge/" target="_blank"
+                  ><img src="../images/twitter (1) 1.svg" />
+                </a>
+              </li>
+              <li>
+                <a href="https://geolab.edu.ge/" target="_blank"
+                  ><img src="../images/instagram 1.svg" />
+                </a>
+              </li>
+              <li>
+                <a href="https://geolab.edu.ge/" target="_blank">
+                  <img src="../images/linkedin-logo 1.svg" />
+                </a>
+              </li>
             </ul>
         </div>
     </footer>
