--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -51,11 +51,27 @@
                 <li>2020</li>
             </ul>
             <ul>
-                <li></li>
-                <li><img src="../images/facebook-24px 1.svg" ></li>
-                <li><img src="../images/twitter (1) 1.svg"></li>
-                <li><img src="../images/instagram 1.svg" ></li>
-                <li><img src="../images/linkedin-logo 1.svg" ></li>
+              <li></li>
+              <li>
+                <a href="https://geolab.edu.ge/" target="_blank"
+                  ><img src="../images/facebook-24px 1.svg"
+                /></a>
+              </li>
+              <li>
+                <a href="https://geolab.edu.ge/" target="_blank"
+                  ><img src="../images/twitter (1) 1.svg" />
+                </a>
+              </li>
+              <li>
+                <a href="https://geolab.edu.ge/" target="_blank"
+                  ><img src="../images/instagram 1.svg" />
+                </a>
+              </li>
+              <li>
+                <a href="https://geolab.edu.ge/" target="_blank">
+                  <img src="../images/linkedin-logo 1.svg" />
+                </a>
+              </li>
             </ul>
         </div>
     </footer>
