--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       href="//cdn.web-fonts.ge/fonts/bpg-glaho-bold/css/bpg-glaho-bold.min.css"
     />
     <link rel="stylesheet" href="css/global.css" />
-    <title>Document</title>
+    <link rel="icon" href="images/თიბისი1.png">
+    <title>ფილმები</title>
   </head>
   <body>
     <header>
