--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,79 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    rel="stylesheet"
-    href="//cdn.web-fonts.ge/fonts/bpg-glaho-bold/css/bpg-glaho-bold.min.css"
-  />
-  <link rel="stylesheet" href="../css/global.css" />
+      rel="stylesheet"
+      href="//cdn.web-fonts.ge/fonts/bpg-glaho-bold/css/bpg-glaho-bold.min.css"
+    />
+    <link rel="stylesheet" href="../css/global.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="c1">
-          <a href="https://www.tbceducation.ge/" target="_blank"
-            ><img src="../images/თიბისი.png" alt="tbclogo"
-          /></a>
-          <nav>
-            <ul>
-              <a href="../index.html"> <li>მთავარი</li></a>
-              <a href="about.html"> <li>ჩვენს შესახებ</li></a>
-              <a href="news.html"> <li>სიახლე</li></a>
-              <a href="contact.html"> <li>კონტაქტი</li></a>
-              <a href="feedback.html"> <li>უკუკავშირი</li></a>
-            </ul>
-          </nav>
-          <svg class="burgerbar" xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+      <div class="c1">
+        <a href="https://www.tbceducation.ge/" target="_blank"
+          ><img src="../images/თიბისი.png" alt="tbclogo"
+        /></a>
+        <nav>
+          <ul>
+            <a href="../index.html"> <li>მთავარი</li></a>
+            <a href="about.html"> <li>ჩვენს შესახებ</li></a>
+            <a href="news.html"> <li>სიახლე</li></a>
+            <a href="contact.html"> <li>კონტაქტი</li></a>
+            <a href="feedback.html"> <li>უკუკავშირი</li></a>
+          </ul>
+        </nav>
+        <svg
+          class="burgerbar"
+          xmlns="http://www.w3.org/2000/svg"
+          height="2em"
+          viewBox="0 0 448 512"
+        >
+          <path
+            d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
+          />
+        </svg>
+      </div>
+    </header>
+    <section class="sec2">
+      <div class="contactdiv">
+        <div class="col1"> 
+        <h1>საკონტაქტო ინფორმაცია</h1>
+        <div class="con1">
+          <img
+            src="../images/location-pin-alt-1-svgrepo-com.svg"
+            alt="location"
+          />
+          <div class="con2">
+            <p>
+              მერაბ ალექსიძის ქ. 10, ქართულ - ამერიკული უნივერსიტეტი (GAU),
+              <br />
+              <br>
+              თბილისი, საქართველო
+            </p>
+          </div>
         </div>
-      </header>
-      <footer>
-        <div class="greenbox">
-            <ul>
-                <li>მთავარი</li>
-                <li>ჩვენს შესახებ</li>
-                <li>უკუკავშირი</li>
-                <li>კონტაქტი</li>
-                
-            </ul>
-            <ul>
-                <li>მეტი</li>
-                <li>1950</li>
-                <li>1960</li>
-                <li>1970</li>
-                <li>1980</li>
-            </ul>
-            <ul>
-                <li>სიახლე</li>
-                <li>2000</li>
-                <li>2010</li>
-                <li>2020</li>
-            </ul>
-            <ul>
-              <li></li>
-              <li>
-                <a href="https://geolab.edu.ge/" target="_blank"
-                  ><img src="../images/facebook-24px 1.svg"
-                /></a>
-              </li>
-              <li>
-                <a href="https://geolab.edu.ge/" target="_blank"
-                  ><img src="../images/twitter (1) 1.svg" />
-                </a>
-              </li>
-              <li>
-                <a href="https://geolab.edu.ge/" target="_blank"
-                  ><img src="../images/instagram 1.svg" />
-                </a>
-              </li>
-              <li>
-                <a href="https://geolab.edu.ge/" target="_blank">
-                  <img src="../images/linkedin-logo 1.svg" />
-                </a>
-              </li>
-            </ul>
+        <div class="con3">
+          <img src="../images/phone-svgrepo-com (2).svg" alt="phone" />
+          <p>577 67 04 04</p>
         </div>
+        <div class="con4">
+          <img src="../images/mail-alt-svgrepo-com.svg" alt="mail" />
+          <p>info@geolab.edu.ge</p>
+        </div>
+      </div>
+      <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5956.237159379189!2d44.784634!3d41.71796!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x404472d4fa5b02d7%3A0xced15c2c7992ceb5!2sGeoLab!5e0!3m2!1sen!2sus!4v1691070519309!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      </div>
+    </section>
+    <footer>
+      <div class="greenbox">
+        <ul>
+          <li>მთავარი</li>
+          <li>ჩვენს შესახებ</li>
+          <li>უკუკავშირი</li>
+          <li>კონტაქტი</li>
+        </ul>
+        <ul>
+          <li>მეტი</li>
+          <li>1950</li>
+          <li>1960</li>
+          <li>1970</li>
+          <li>1980</li>
+        </ul>
+        <ul>
+          <li>სიახლე</li>
+          <li>2000</li>
+          <li>2010</li>
+          <li>2020</li>
+        </ul>
+        <ul>
+          <li></li>
+          <li>
+            <a href="https://geolab.edu.ge/" target="_blank"
+              ><img src="../images/facebook-24px 1.svg"
+            /></a>
+          </li>
+          <li>
+            <a href="https://geolab.edu.ge/" target="_blank"
+              ><img src="../images/twitter (1) 1.svg" />
+            </a>
+          </li>
+          <li>
+            <a href="https://geolab.edu.ge/" target="_blank"
+              ><img src="../images/instagram 1.svg" />
+            </a>
+          </li>
+          <li>
+            <a href="https://geolab.edu.ge/" target="_blank">
+              <img src="../images/linkedin-logo 1.svg" />
+            </a>
+          </li>
+        </ul>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
