--- a/pages/about.html
+++ b/pages/about.html
@@ -28,6 +28,23 @@
           <svg class="burgerbar" xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
         </div>
       </header>
+        <section class="about-us">
+          <div class="about">
+            <div class="pic">
+        <img src="../images/about.png" alt="">
+      </div>
+            <div class="text">
+              <h2>ჩვენს შესახებ</h2>
+              <br>
+                <p>ქართველთა ახალგაზრდა თაობის (GenZ-ს) ნახევარმა, უმეტესობამ თუ არა, არ იცის რაოდენ კარგი ფილმები იქნა გადაღებული ქართული რეჟისორების მიერ 20-ე საუკუნეში. ვფიქრობ, ამ პრობლემის მიზეზი მდგომარეობს იმაში, რომ მათთვის ნაცნობ და გასაგებ ფორმატით არ არის მიწოდებული ეს კონკრეტული ინფორმაცია. შესაბამისად, ვებგვერდი მიმართულია ამ პრობლემის გადაჭრისაკენ.
+                <br>
+                ძველი ქართული ფილმები ჯერ კიდევ მოდაშია. 
+
+                </p>
+          
+            </div>
+          </div>
+        </section>
       <footer>
         <div class="greenbox">
             <ul>
