--- a/pages/news.html
+++ b/pages/news.html
@@ -1,79 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-    rel="stylesheet"
-    href="//cdn.web-fonts.ge/fonts/bpg-glaho-bold/css/bpg-glaho-bold.min.css"
-  />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="//cdn.web-fonts.ge/fonts/bpg-glaho-bold/css/bpg-glaho-bold.min.css" />
   <link rel="stylesheet" href="../css/global.css" />
-    <title>Document</title>
+  <title>Document</title>
 </head>
+
 <body>
-    <header>
-        <div class="c1">
-          <a href="https://www.tbceducation.ge/" target="_blank"
-            ><img src="../images/თიბისი.png" alt="tbclogo"
-          /></a>
-          <nav>
-            <ul>
-              <a href="../index.html"> <li>მთავარი</li></a>
-              <a href="about.html"> <li>ჩვენს შესახებ</li></a>
-              <a href="news.html"> <li>სიახლე</li></a>
-              <a href="contact.html"> <li>კონტაქტი</li></a>
-              <a href="feedback.html"> <li>უკუკავშირი</li></a>
-            </ul>
-          </nav>
-          <svg class="burgerbar" xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+  <header>
+    <div class="c1">
+      <a href="https://www.tbceducation.ge/" target="_blank"><img src="../images/თიბისი.png" alt="tbclogo" /></a>
+      <nav>
+        <ul>
+          <a href="../index.html">
+            <li>მთავარი</li>
+          </a>
+          <a href="about.html">
+            <li>ჩვენს შესახებ</li>
+          </a>
+          <a href="news.html">
+            <li>სიახლე</li>
+          </a>
+          <a href="contact.html">
+            <li>კონტაქტი</li>
+          </a>
+          <a href="feedback.html">
+            <li>უკუკავშირი</li>
+          </a>
+        </ul>
+      </nav>
+      <svg class="burgerbar" xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 448 512">
+        <path
+          d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
+      </svg>
+    </div>
+  </header>
+  <section class="news">
+    <div class="mainnews">
+      <h1>სიახლე</h1>
+      <div class="newscont">
+        <div class="newsflex1">
+            <img src="../images/movie.png">
+
+          <div class="news2">
+            <div>
+              <p> 2000 წელს გადაღებული ქართული ფილმები</p>
+            </div>
+            <div>
+              <a href=""> იხილეთ მეტი</a>
+            </div>
+          </div>
         </div>
-      </header>
-      <footer>
-        <div class="greenbox">
-            <ul>
-                <li>მთავარი</li>
-                <li>ჩვენს შესახებ</li>
-                <li>უკუკავშირი</li>
-                <li>კონტაქტი</li>
-                
-            </ul>
-            <ul>
-                <li>მეტი</li>
-                <li>1950</li>
-                <li>1960</li>
-                <li>1970</li>
-                <li>1980</li>
-            </ul>
-            <ul>
-                <li>სიახლე</li>
-                <li>2000</li>
-                <li>2010</li>
-                <li>2020</li>
-            </ul>
-            <ul>
-              <li></li>
-              <li>
-                <a href="https://geolab.edu.ge/" target="_blank"
-                  ><img src="../images/facebook-24px 1.svg"
-                /></a>
-              </li>
-              <li>
-                <a href="https://geolab.edu.ge/" target="_blank"
-                  ><img src="../images/twitter (1) 1.svg" />
-                </a>
-              </li>
-              <li>
-                <a href="https://geolab.edu.ge/" target="_blank"
-                  ><img src="../images/instagram 1.svg" />
-                </a>
-              </li>
-              <li>
-                <a href="https://geolab.edu.ge/" target="_blank">
-                  <img src="../images/linkedin-logo 1.svg" />
-                </a>
-              </li>
-            </ul>
+        <div class="newsflex1">
+
+            <img src="../images/popcorn.png">
+
+          <div class="news2">
+            <div>
+              <p> 2010 წელს გადაღებული ქართული ფილმები</p>
+            </div>
+            <div>
+              <a href=""> იხილეთ მეტი</a>
+            </div>
+          </div>
         </div>
-    </footer>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="greenbox">
+      <ul>
+        <li>მთავარი</li>
+        <li>ჩვენს შესახებ</li>
+        <li>უკუკავშირი</li>
+        <li>კონტაქტი</li>
+
+      </ul>
+      <ul>
+        <li>მეტი</li>
+        <li>1950</li>
+        <li>1960</li>
+        <li>1970</li>
+        <li>1980</li>
+      </ul>
+      <ul>
+        <li>სიახლე</li>
+        <li>2000</li>
+        <li>2010</li>
+        <li>2020</li>
+      </ul>
+      <ul>
+        <li></li>
+        <li>
+          <a href="https://geolab.edu.ge/" target="_blank"><img src="../images/facebook-24px 1.svg" /></a>
+        </li>
+        <li>
+          <a href="https://geolab.edu.ge/" target="_blank"><img src="../images/twitter (1) 1.svg" />
+          </a>
+        </li>
+        <li>
+          <a href="https://geolab.edu.ge/" target="_blank"><img src="../images/instagram 1.svg" />
+          </a>
+        </li>
+        <li>
+          <a href="https://geolab.edu.ge/" target="_blank">
+            <img src="../images/linkedin-logo 1.svg" />
+          </a>
+        </li>
+      </ul>
+    </div>
+  </footer>
 </body>
+
 </html>
