--- a/pages/more.html
+++ b/pages/more.html
@@ -12,6 +12,7 @@
       href="//cdn.web-fonts.ge/fonts/alk-life/css/alk-life.min.css"
     />
     <link rel="stylesheet" href="../css/global.css" />
+    <link rel="icon" href="../images/თიბისი1.png">
     <title>Document</title>
   </head>
   <body>
