--- a/pages/1968.html
+++ b/pages/1968.html
@@ -8,7 +8,7 @@
     href="//cdn.web-fonts.ge/fonts/bpg-glaho-bold/css/bpg-glaho-bold.min.css"
   />
   <link rel="stylesheet" href="../css/global.css" />
-    <title>Document</title>
+  <link rel="icon" href="../images/თიბისი1.png">
 </head>
 <body>
     <header>
