--- a/pages/news.html
+++ b/pages/news.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="//cdn.web-fonts.ge/fonts/bpg-glaho-bold/css/bpg-glaho-bold.min.css" />
   <link rel="stylesheet" href="../css/global.css" />
+  <link rel="icon" href="../images/თიბისი1.png">
   <title>Document</title>
 </head>
 
