--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,24 +49,21 @@
           />
           <div class="con2">
             <p>
-              მერაბ ალექსიძის ქ. 10, ქართულ - ამერიკული უნივერსიტეტი (GAU),
-              <br />
-              <br>
-              თბილისი, საქართველო
+              London HA9 0WS, United Kingdom
             </p>
           </div>
         </div>
         <div class="con3">
           <img src="../images/phone-svgrepo-com (2).svg" alt="phone" />
-          <p>577 67 04 04</p>
+          <p>+448001699933</p>
         </div>
         <div class="con4">
           <img src="../images/mail-alt-svgrepo-com.svg" alt="mail" />
-          <p>info@geolab.edu.ge</p>
+          <p>mail123@gmail.com</p>
         </div>
       </div>
       <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5956.237159379189!2d44.784634!3d41.71796!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x404472d4fa5b02d7%3A0xced15c2c7992ceb5!2sGeoLab!5e0!3m2!1sen!2sus!4v1691070519309!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9922.663684292764!2d-0.2796177!3d51.5560247!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761181d57a876d%3A0xa64f9f185de8e097!2sWembley%20Stadium!5e0!3m2!1sen!2sge!4v1691573445456!5m2!1sen!2sge" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       </div>
     </section>
